--- a/cart.html
+++ b/cart.html
@@ -13,6 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1></h1>
+    <h2>Hello Admin</h2>
 </body>
 </html>
