--- a/cart.html
+++ b/cart.html
@@ -8,11 +8,26 @@
     <link rel="stylesheet" href="css/cart.css">
     <script src="js/cart.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/logout.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
     <h2>Hello Admin</h2>
+    <div class="myClassLog">
+        <input type="button" value="Logout" name="btn" id="btnlog" value="Login" onclick="logout()" >
+    </div>
+    <form action="" method="post">
+        <div class="container">
+          <label for="uname" style="position: relative; left:180px"><b>Product Code</b></label>
+          <input type="text" placeholder="Enter Product Code" name="uname" id="username">
+        
+          <label for="psw" style="position: relative; left:220px"><b>Total Units</b></label>
+          <input type="password" placeholder="Enter Total Units" name="password" id="password" style="position: relative; left:230px">
+        
+          <input type="button" name="btn" id="btn" value="Get Details" onclick="" />
+        </div>
+    </form>
 </body>
 </html>
