--- a/cart.html
+++ b/cart.html
@@ -19,11 +19,11 @@
     </div>
     <form action="" method="post">
         <div class="container">
-          <label for="uname" style="position: relative; left:180px"><b>Product Code</b></label>
+          <label for="uname" style="position: relative; left:500px"><b>Product Code</b></label>
           <input type="text" placeholder="Enter Product Code" name="uname" id="proId">
         
-          <label for="psw" style="position: relative; left:220px"><b>Total Units</b></label>
-          <input type="password" placeholder="Enter Total Units" name="password" id="password" style="position: relative; left:230px">
+          <!-- <label for="psw" style="position: relative; left:220px"><b>Total Units</b></label>
+          <input type="password" placeholder="Enter Total Units" name="password" id="password" style="position: relative; left:230px"> -->
         
           <input type="button" name="btn" id="btn" value="Get Details" onclick="showInfo()" />
         </div>
