--- a/cart.html
+++ b/cart.html
@@ -38,6 +38,15 @@
              <li>Total Price</li>
          </ul>
     </div>
+    <div class="container-cart-details">
+        <ul style="list-style: none">
+            <li id="tpname"></li>
+            <li id="tpid"></li>
+            <li id="tunit"></li>
+            <li id="tpprice"></li>
+            <li id="tptotal"> </li>
+        </ul>
+    </div>
     
    
 </body>
