--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h2>Hello Admin</h2>
+    <h1>Hello Admin</h1>
     <div class="myClassLog">
         <input type="button" value="Logout" name="btn" id="btnlog" value="Login" onclick="logout()" >
     </div>
@@ -48,6 +48,10 @@
         </ul>
     </div>
     
+
+    <div class="footer">
+        <p>&copy; 2021 Copyright: Developed by <a href="https://sibashish99.github.io/"  target="_blank"> SIBASHISH BISWAS</a></p>
+      </div>
    
 </body>
 </html>
