--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h2>Point-of-Sale Application</h2>
+    <h1>Point-of-Sale Application</h1>
 
    <form action="" method="post">
     <div class="container">
@@ -25,7 +25,9 @@
       <input type="button" name="btn" id="btn" value="Login" onclick="getInfo()" />
   </div>
 
-
+  <div class="footer">
+    <p>&copy; 2021 Copyright: Developed by <a href="https://sibashish99.github.io/"  target="_blank"> SIBASHISH BISWAS</a></p>
+  </div>
 </form>
 </body>
 </html>
