--- a/cart.html
+++ b/cart.html
@@ -47,7 +47,14 @@
             <li id="tptotal"> </li>
         </ul>
     </div>
-    
+    <div class="container-cart-total" >
+        <ul >
+            <li>Total Price</li>
+            <li id="totalPrice"></li>
+        </ul>
+    </div>
+
+    <input type="button" name="btn" id="btnCom" value="Complete" onclick="completeShop()" />
 
     <div class="footer">
         <p>&copy; 2021 Copyright: Developed by <a href="https://sibashish99.github.io/"  target="_blank"> SIBASHISH BISWAS</a></p>
