--- a/cart.html
+++ b/cart.html
@@ -29,7 +29,7 @@
         </div>
     </form>
     <!--card-->
-    <div class="container-cart">
+   <div class="container-cart">
          <ul>
              <li>Product Name</li>
              <li>Product Code</li>
@@ -38,7 +38,7 @@
              <li>Total Price</li>
          </ul>
     </div>
-    <div class="container-cart-details">
+     <!-- <div class="container-cart-details">
         <ul style="list-style: none">
             <li id="tpname"></li>
             <li id="tpid"></li>
@@ -52,7 +52,8 @@
             <li>Total Price</li>
             <li id="totalPrice"></li>
         </ul>
-    </div>
+    </div> -->
+    <div id='container-cart-main'></div>
 
     <input type="button" name="btn" id="btnCom" value="Complete" onclick="completeShop()" />
 
