--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
        <br>
       <input type="button" name="btn" id="btn" value="Login" onclick="getInfo()" />
   </div>
+  
 
+
+
+  
+    <!--footer-->
   <div class="footer">
     <p>&copy; 2021 Copyright: Developed by <a href="https://sibashish99.github.io/"  target="_blank"> SIBASHISH BISWAS</a></p>
   </div>
