--- a/price.html
+++ b/price.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/price.css">
+    <script src="js/price.js"></script>
 </head>
-<body>
-    Your total bill
+<body >
+    <p class="demo">Bill Number:  <span id="demo"></span></p>
+    <p id="demo1" class="demo1"></p>
+
+    
 </body>
 </html>
