--- a/cart.html
+++ b/cart.html
@@ -38,25 +38,14 @@
              <li>Total Price</li>
          </ul>
     </div>
-     <!-- <div class="container-cart-details">
-        <ul style="list-style: none">
-            <li id="tpname"></li>
-            <li id="tpid"></li>
-            <li id="tunit"></li>
-            <li id="tpprice"></li>
-            <li id="tptotal"> </li>
-        </ul>
-    </div>
-    <div class="container-cart-total" >
-        <ul >
-            <li>Total Price</li>
-            <li id="totalPrice"></li>
-        </ul>
-    </div> -->
+
     <div id='container-cart-main'></div>
 
-    <input type="button" name="btn" id="btnCom" value="Complete" onclick="completeShop()" />
+    <input type="button" name="btn" id="btnCom" value="Complete" target="_blank" onclick="completeShop()" />
 
+
+
+    <!--footer-->
     <div class="footer">
         <p>&copy; 2021 Copyright: Developed by <a href="https://sibashish99.github.io/"  target="_blank"> SIBASHISH BISWAS</a></p>
       </div>
