--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>POS WEBAPP</title>
     <link rel="stylesheet" href="css/cart.css">
     <script src="js/cart.js"></script>
     <script src="js/logout.js"></script>
@@ -47,7 +47,7 @@
 
     <!--footer-->
     <div class="footer">
-        <p>&copy; 2021 Copyright: Developed by <a href="https://sibashish99.github.io/"  target="_blank"> SIBASHISH BISWAS</a></p>
+        <p>&copy; 2021 Copyright: Developed by <a href="https://sibashish99.github.io/"  target="_blank"> Sibashish</a></p>
       </div>
    
 </body>
