--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>POS WEBAPP</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +31,7 @@
   
     <!--footer-->
   <div class="footer">
-    <p>&copy; 2021 Copyright: Developed by <a href="https://sibashish99.github.io/"  target="_blank"> SIBASHISH BISWAS</a></p>
+    <p>&copy; 2021 Copyright: Developed by <a href="https://sibashish99.github.io/"  target="_blank"> Sibashish</a></p>
   </div>
 </form>
 </body>
