--- a/price.html
+++ b/price.html
@@ -6,11 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/price.css">
-    <script src="js/price.js"></script>
+    <script src="js/cart.js"></script>
 </head>
 <body >
     <p class="demo">Bill Number:  <span id="demo"></span></p>
     <p id="demo1" class="demo1"></p>
+    <div class="container-cart1">
+        <ul>
+            <li>Product Code</li>
+            <li>Total Units</li>
+            <li>Price</li>
+            <li>Total </li>
+        </ul>
+   </div>
+
+    <div id='container-cart-main-price'></div>
 
     
 </body>
