--- a/price.html
+++ b/price.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/price.css">
-    <script src="js/cart.js"></script>
+    <script src="js/price.js"></script>
 </head>
 <body >
     <p class="demo">Bill Number:  <span id="demo"></span></p>
